<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_refresh"
        android:checkable="false"
        android:title="refresh"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_stop"
        android:title="@string/menu_stop"
        android:orderInCategory="101"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
